--- a/去乐园/html/home.css
+++ b/去乐园/html/home.css
@@ -1,3 +1,4 @@
+a:hover{text-decoration: none}
 .swiper-container{width: 100%;height: 153px}
 .swiper-wrapper{width: 100%;height: 100%;}
 .swiper-slide{width: 100%;}
