--- a/去乐园/css/index.css
+++ b/去乐园/css/index.css
@@ -1,4 +1,4 @@
-#wrap{width:100%;height:500px;background: #eeeeee;overflow: scroll;}
+#wrap{width:100%;background: #eeeeee;overflow: hidden;}
 #footer{width: 100%;height: 60px;background: white;position: fixed;bottom: 0}
 .row{height: 100%}
 .home{height: 100%;text-align: center;}
