--- a/去乐园/html/me.css
+++ b/去乐园/html/me.css
@@ -1,14 +1,9 @@
-*{margin: 0;padding: 0;}
-li{list-style: none;}
-#main4{width:100%;height: 100%;background: #eeeeee;}
-.main4_top{width: 100%;height: 15rem;float: left;background: white;}
-.main4_head{width: 8.1rem;height: 8.1rem;border-radius:50%;margin:2rem auto;background: pink;}
-.main4_center{width: 100%;float: left;margin-top:1.5rem;padding:0 1.5rem;background: white;}
-.main4_li{width: 100%;height:4.6rem;border-bottom:1px solid #dedede;font-size: 1.5rem;line-height: 4.6rem;float: left;}
-.main4_li:first-child{border-top: 1px solid #dedede;}
-.main4_li:last-child{border: none;}
-.main4_li p:first-child{width:22.5rem;float: left;margin: 0;color:#616161;}
-.main4_li p:last-child{width:1.5rem;float: right;margin: 0;}
-.main4_ma{width:5rem;height: 2.5rem;float: right;margin-top:-6.5rem;}
-.main4_ma .iconfont{font-size:2.5rem;width:2.5rem;padding: 0;float: left;}
-.main4_ma .iconfont:last-child{font-size: 1rem;padding:0.75rem;}
+#meHead{width: 100%;height: 150px;text-align: center;position: relative;}
+#headbg{width: 100%;height: 150px;background: url(../img/1.jpg) no-repeat;background-size: 100% 150px;-webkit-filter:blur(5px);filter: blur(5px);position: absolute;top: 0;left: 0}
+#meHead img{width: 80px;height: 80px;border-radius: 50%;-webkit-filter:blur(0.1px);filter: blur(0.1px);margin-top: 35px;}
+#erweima{position: absolute;bottom: 30px;right: 60px}
+#erweima span{color: white;font-size: 30px}
+#erweima span:last-child{font-size: 20px}
+.list3{width: 100%;background: white;margin-top: 30px}
+.list3 li{background: white;border-bottom: 1px solid #eeeeee;width: 98%;margin: 0 auto;height:50px;line-height: 50px;font-size: 20px}
+.list3 li span{float: right;font-weight: bold;}
