--- a/去乐园/html/paradise.css
+++ b/去乐园/html/paradise.css
@@ -1,9 +1,11 @@
 .nav{width: 100%;height: 50px;}
-.nav a{display: block;font-weight: bold;color: black}
+a:hover{text-decoration: none;}
+.nav a{display: block;font-weight: bold;color: black;}
 .lowernav{text-align: center;height: 50px;line-height: 50px;font-size: 20px;}
 .lowernav:first-child{border-bottom: 2px solid #ea6e64}
-.list li{margin-top: 5px;width: 100%;height: 125px;position: relative;}
-.list li img{width: 100%;height: 100%}
+.list2 li{margin-bottom: 5px;width: 100%;height: 125px;position: relative;}
+.list2 li img:first-child{width: 100%;height: 100%;-webkit-filter:brightness(0.6);}
+.list2 li img:hover{-webkit-filter:brightness(1)}
 .descript {position: absolute;left: 20px;bottom: 10px;width: 50%;height: 50%;}
 .descript p{font-size: 20px;margin-top: 0;color: white;}
 .address{width: 30%;height: 50%;position: absolute;right: 30px;bottom: 10px;text-align: center;}
